ocp/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cargo-tracker
  labels:
    app.kubernetes.io/name: cargo-tracker
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
    app.openshift.io/runtime: java
  annotations:
    image.openshift.io/triggers: |-
      [
        {
          "from": {
            "kind": "ImageStreamTag",
            "name": "cargo-tracker:latest"
          },
          "fieldPath": "spec.template.spec.containers[0].image"
        }
      ]
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: cargo-tracker
      app.kubernetes.io/version: 1.0.0-SNAPSHOT
  template:
    metadata:
      labels:
        app.openshift.io/runtime: java
        app.kubernetes.io/version: 1.0.0-SNAPSHOT
        app.kubernetes.io/name: cargo-tracker
        app: cargo-tracker
    spec:
      containers:
      - name: cargo-tracker
        image: cargo-tracker:latest
        imagePullPolicy: Always
        resources:
          limits:
            cpu: '500m'
            memory: 800Mi
          requests:
            cpu: '100m'
            memory: 500Mi
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /health/live
            port: 9990
            scheme: HTTP
          initialDelaySeconds: 10
        readinessProbe:
          httpGet:
            path: /health/ready
            port: 9990
            scheme: HTTP
          initialDelaySeconds: 10
        startupProbe:
          httpGet:
            path: /health/started
            port: 9990
            scheme: HTTP
          initialDelaySeconds: 10
