ocp/base/pg-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cargo-tracker-pg
    app.openshift.io/runtime: postgresql
  name: cargo-tracker-pg
spec:
  replicas: 1
  selector:
    matchLabels:
      name: cargo-tracker-pg
  template:
    metadata:
      labels:
        name: cargo-tracker-pg
    spec:
      containers:
      - name: cargo-tracker-pg
        image: registry.redhat.io/rhel9/postgresql-15
        ports:
        - containerPort: 5432
        livenessProbe:
          initialDelaySeconds: 30
          tcpSocket:
            port: 5432
          timeoutSeconds: 1
        readinessProbe:
          exec:
            command:
            - pg_isready
          initialDelaySeconds: 5
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 500m
            memory: 256Mi
        volumeMounts:
        - mountPath: /var/lib/pgsql/data
          name: storage
      volumes:
      - name: storage
        emptyDir: {}
