ocp/base/pg-svc.yaml

apiVersion: v1
kind: Service
metadata:
  name: cargo-tracker-pg
spec:
  ports:
    - port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    name: cargo-tracker-pg
  type: ClusterIP
