ocp/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: cargo-tracker
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: cargo-tracker
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
