ocp/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: cargo-tracker
spec:
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: cargo-tracker
    weight: 100
  wildcardPolicy: None
